fixed spacing and naming conventions

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,5 +1,5 @@
 body {
-    background: url(./test4.png);
+    background: url(./Background.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
